# sandbox

./: .sandbox.toml  AGENTS.md  Cargo.toml  Dockerfile  README.md
src/: agent.rs  anthropic.rs  cli.rs  config.rs  daemon.rs  daemon_protocol.rs  docker.rs  git.rs  lib.rs  main.rs  network.rs  sandbox.rs  sandbox_config.rs  setup.rs  sync.rs
tests/: agent.rs  delete.rs  integration.rs  sync.rs
tests/common/: mod.rs
