[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandbox"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"
nix = { version = "0.27", features = ["user"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
fs_extra = "1.3"
