[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandbox"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "*"
toml = "*"
log = "*"
env_logger = "*"
clap = { version = "*", features = ["derive"] }
sha2 = "*"
hex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
notify = "*"
tokio = { version = "*", features = ["full"] }
dirs = "*"
nix = { version = "*", features = ["user", "fs"] }
chrono = { version = "*", features = ["serde"] }
libc = "*"
reflink-copy = "*"
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indoc = "*"
strum = { version = "*", features = ["derive"] }
backoff = "*"
rand = "*"
tempfile = "*"
listenfd = "*"

[dev-dependencies]
assert_cmd = "*"
portable-pty = "*"
